# image_gen

./: .gitignore  Cargo.toml  README.md  justfile  template.rs  template.txt
src/: 6_16_22.rs  6_18_22.rs  7_2_22.rs  7_4_22.rs  7_5_22.rs  7_6_22.rs  collapse.rs  image_test.rs  main.rs  square1.rs  square2.rs  square3.rs  square4.rs  template.rs
src/helpers/: mod.rs  shapes.rs
