[package]
name = "image_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
chrono = "0.4.19"

[[bin]]
name = "square1"
path = "src/square1.rs"

[[bin]]
name = "square2"
path = "src/square2.rs"

[[bin]]
name = "square3"
path = "src/square3.rs"

[[bin]]
name = "square4"
path = "src/square4.rs"

[[bin]]
name = "6_16_22"
path = "src/6_16_22.rs"

[[bin]]
name = "6_18_22"
path = "src/6_18_22.rs"

[[bin]]
name = "7_2_22"
path = "src/7_2_22.rs"

[[bin]]
name = "7_4_22"
path = "src/7_4_22.rs"
