[package]
name = "image_gen"
version = "0.1.0"
edition = "2021"

# Fast compiles https://github.com/bevyengine/bevy/blob/main/.cargo/config_fast_builds

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-Clink-arg=-fuse-ld=lld"]

[profile.dev]
debug = false

####

[dependencies]
nannou = "0.18.1"
chrono = "0.4.19"

[[bin]]
name = "square1"
path = "src/square1.rs"

[[bin]]
name = "square2"
path = "src/square2.rs"

[[bin]]
name = "square3"
path = "src/square3.rs"

[[bin]]
name = "square4"
path = "src/square4.rs"

[[bin]]
name = "6_16_22"
path = "src/6_16_22.rs"

[[bin]]
name = "6_18_22"
path = "src/6_18_22.rs"

[[bin]]
name = "7_2_22"
path = "src/7_2_22.rs"

[[bin]]
name = "7_4_22"
path = "src/7_4_22.rs"

[[bin]]
name = "7_5_22"
path = "src/7_5_22.rs"

[[bin]]
name = "7_6_22"
path = "src/7_6_22.rs"
